# build-bridge

./: .gitignore  BK_Main_content.txt  Build Stream by build Bridge.spec  Cargo.toml  Main.html  Serve-Page.html  app.manifest  bridge_serve_python.py  bridge_serve_python.spec  build.rs  build_python_exe.py  clippy_output.txt
DEMO/working-LANIP/: Android_Serve.py  Start_Serve.bat
mac_sidebar_creator/: Cargo.toml
mac_sidebar_creator/src/: main.rs
server/: Serve-Page.html  bridge_serve_python.py  version_info.txt
src/: app_window.rs  config.rs  icons.rs  main.rs  models.rs  storage.rs
src/app/: bridge_status.rs  mod.rs  project_page.rs  sidebar.rs  terminal.rs  theme_popup.rs
