[package]
name = "BuildBridge-Serve_Build"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
directories = "5"
eframe = { version = "0.33", default-features = true }
egui = "0.33"
egui_extras = { version = "0.33", features = ["svg"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6"
