[package]
name = "BuildBridge-Serve_Build"
version = "0.1.0"
edition = "2024"
default-run = "BuildBridge-Serve_Build"

[dependencies]
chrono = "0.4"
directories = "5"
eframe = { version = "0.33", default-features = true }
egui = "0.33"
egui_extras = { version = "0.33", features = ["svg"] }
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
get_if_addrs = "0.5"
local-ip-address = "0.6"
qrcode = "0.14"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
window-vibrancy = "0.6"
portable-pty = "0.9"

[build-dependencies]
winresource = "0.1"
